# test_from_YL

./: .gitignore  Dockerfile  README.md  app.sh  dev.env  docker-compose-test.yml  docker-compose.yml  local.env  pyproject.toml  pytest.ini  test_dev.env  test_local.env
menu/: main.py
menu/alembic/: README  env.py
menu/alembic/versions/: 26cf5effc2dd_you_re_comment_here.py  70565b6d0c4f_you_re_comment_here.py  8137a86ba008_you_re_comment_here.py  91dffbb20d37_first_migration.py  92d1b8edf895_you_re_comment_here.py
menu/api/: routers.py
menu/api/v1/: __init__.py  dish.py  dishes.py  menu.py  submenu.py  validators.py
menu/cache/: redis.py
menu/core/: base.py  config.py  db.py
menu/crud/: base.py  dish.py  dishes.py  menu.py  submenu.py
menu/models/: __init__.py  base.py  dish.py  dishes.py  menu.py  submenu.py
menu/schemas/: dish.py  menu.py  submenu.py
tests/: conftest.py  test_crud.py  test_scenario.py
tests/maintests/: test_dish.py  test_menu.py  test_submenu.py
